--- a/www/index.html
+++ b/www/index.html
@@ -22,21 +22,35 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.1.1.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme-1.1.1.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.1.1.css" />
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready">
-                <p class="status pending blink">Connecting to Device</p>
-                <p class="status complete blink hide">Device is Ready</p>
-            </div>
+        <div data-role="page">
+	        <div data-role="header">
+		        <h1>Campaign</h1>
+	        </div>
+
+	        <div data-role="content">
+                <ul data-role="listview" data-inset="true" data-filter="true">
+	                <li><a href="#">Acura</a></li>
+	                <li><a href="#">Audi</a></li>
+	                <li><a href="#">BMW</a></li>
+	                <li><a href="#">Cadillac</a></li>
+	                <li><a href="#">Ferrari</a></li>
+                </ul>
+	        </div>
+            <div data-role="footer">
+		        <h1>Footer</h1>
+	        </div>
         </div>
         <script type="text/javascript" src="cordova-2.0.0.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+         <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/jquery.mobile-1.1.1.js"></script>
         <script type="text/javascript">
-            app.initialize();
+            //app.initialize();
         </script>
     </body>
 </html>
