--- a/www/index.html
+++ b/www/index.html
@@ -47,10 +47,8 @@
 	        </div>
         </div>
         <script type="text/javascript" src="cordova-2.0.0.js"></script>
-         <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.1.1.js"></script>
-        <script type="text/javascript">
-            //app.initialize();
-        </script>
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
