--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,8 @@
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.1.1.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme-1.1.1.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.1.1.css" />
+        <link rel="stylesheet" type="text/css" href="css/jqm-icon-pack-2.1.2-fa.css" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
         <title>Hello World</title>
     </head>
     <body>
@@ -34,13 +36,40 @@
 	        </div>
 
 	        <div data-role="content">
-                <ul data-role="listview" data-inset="true" data-filter="true">
-	                <li><a href="#acura">Acura</a></li>
-	                <li><a href="#">Audi</a></li>
-	                <li><a href="#">BMW</a></li>
-	                <li><a href="#">Cadillac</a></li>
-	                <li><a href="#">Ferrari</a></li>
-                </ul>
+                <div class="ui-grid-a">
+                    <a href="#acura" class="main-category-link">
+                    <div class="ui-block-a main-category-wrapper">
+                        <div class="ui-bar ui-bar-a main-category">
+                        <span class="ui-icon ui-icon-bell">&nbsp;</span>
+                        Map
+                        </div>
+                    </div>
+                    </a>
+                    <a href="#" class="main-category-link">
+                    <div class="ui-block-b main-category-wrapper">
+                        <div class="ui-bar ui-bar-a main-category">
+                            <span class="ui-icon ui-icon-map-marker">&nbsp;</span>
+                            About
+                        </div>
+                    </div>
+                    </a>
+                    <a href="#" class="main-category-link">
+                    <div class="ui-block-a main-category-wrapper">
+                        <div class="ui-bar ui-bar-a main-category">
+                            <span class="ui-icon ui-icon-map-marker">&nbsp;</span>
+                            Twitter
+                        </div>
+                    </div>
+                    </a>
+                    <a href="#" class="main-category-link">
+                    <div class="ui-block-b main-category-wrapper">
+                        <div class="ui-bar ui-bar-a main-category">
+                        <span class="ui-icon ui-icon-map-marker">&nbsp;</span>
+                        Misc.
+                        </div>
+                    </div>
+                    </a>
+                </div>
 	        </div>
             <div data-role="footer">
 		        <h1>Footer</h1>
@@ -53,7 +82,23 @@
 	        </div>
 
 	        <div data-role="content">
-                <p>Acura page dude</p>
+                <div class="ui-bar-c ui-corner-all ui-shadow" style="padding: 1em;">
+                    <div id="map-canvas" style="height: 350px;"></div>
+                    <p>
+                    <label for="from">From</label>
+                    <input id="from" type="text" value="Muizenberg, Cape Town, South Africa">
+                    </p>
+                    <p>
+                    <label for="to">To</label>
+                    <input id="to" type="text" value="Kenilworth, Cape Town, South Africa">
+                    </p>
+                    <a id="submit" href="#" data-role="button" data-icon="search" data-theme="c" aria-hidden="true"><span class="ui-btn-text">Get directions</span></a>
+                </div>
+                <div id="results" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" style="display: none;">
+                    <div class="ui-li ui-li-divider ui-btn ui-bar-b ui-corner-top ui-btn-up-undefined">Results</div>
+                    <div id="directions" style="direction: ltr;"></div>
+                    <div class="ui-li ui-li-divider ui-btn ui-bar-b ui-corner-bottom ui-btn-up-undefined"></div>
+                </div>
 	        </div>
             <div data-role="footer">
 		        <h1>Footer</h1>
@@ -61,8 +106,12 @@
         </div>
 
         <script type="text/javascript" src="cordova-2.0.0.js"></script>
+        <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.1.1.js"></script>
+        <script type="text/javascript" src="js/jquery.ui.map.js"></script>
+        <script type="text/javascript" src="js/jquery.ui.map.services.js"></script>
+        <script type="text/javascript" src="js/jquery.ui.map.extensions.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript">
             app.initialize();
