--- a/www/index.html
+++ b/www/index.html
@@ -37,38 +37,18 @@
 
 	        <div data-role="content">
                 <div class="ui-grid-a">
-                    <a href="#acura" class="main-category-link">
                     <div class="ui-block-a main-category-wrapper">
-                        <div class="ui-bar ui-bar-a main-category">
-                        <span class="ui-icon ui-icon-bell">&nbsp;</span>
-                        Map
-                        </div>
+                        <a class="main-category" href="#acura" data-role="button" data-theme="a" data-wrapper-els="" data-icon="map-marker">Map</a>
                     </div>
-                    </a>
-                    <a href="#" class="main-category-link">
                     <div class="ui-block-b main-category-wrapper">
-                        <div class="ui-bar ui-bar-a main-category">
-                            <span class="ui-icon ui-icon-map-marker">&nbsp;</span>
-                            About
-                        </div>
+                        <a class="main-category" href="#" data-role="button" data-theme="a" data-icon="columns">About</a>
                     </div>
-                    </a>
-                    <a href="#" class="main-category-link">
                     <div class="ui-block-a main-category-wrapper">
-                        <div class="ui-bar ui-bar-a main-category">
-                            <span class="ui-icon ui-icon-map-marker">&nbsp;</span>
-                            Twitter
-                        </div>
+                        <a class="main-category" href="#" data-role="button" data-theme="a" data-icon="twitter">Twitter</a>
                     </div>
-                    </a>
-                    <a href="#" class="main-category-link">
                     <div class="ui-block-b main-category-wrapper">
-                        <div class="ui-bar ui-bar-a main-category">
-                        <span class="ui-icon ui-icon-map-marker">&nbsp;</span>
-                        Misc.
-                        </div>
+                        <a class="main-category" href="#" data-role="button" data-theme="a" data-icon="star">Misc</a>
                     </div>
-                    </a>
                 </div>
 	        </div>
             <div data-role="footer">
