--- a/www/index.html
+++ b/www/index.html
@@ -38,13 +38,13 @@
 	        <div data-role="content">
                 <div class="ui-grid-a">
                     <div class="ui-block-a main-category-wrapper">
-                        <a class="main-category" href="#acura" data-role="button" data-theme="a" data-wrapper-els="" data-icon="map-marker">Map</a>
+                        <a class="main-category" href="#map" data-role="button" data-theme="a" data-wrapper-els="" data-icon="map-marker">Map</a>
                     </div>
                     <div class="ui-block-b main-category-wrapper">
                         <a class="main-category" href="#" data-role="button" data-theme="a" data-icon="columns">About</a>
                     </div>
                     <div class="ui-block-a main-category-wrapper">
-                        <a class="main-category" href="#" data-role="button" data-theme="a" data-icon="twitter">Twitter</a>
+                        <a class="main-category" href="#twitter" data-role="button" data-theme="a" data-icon="twitter">Twitter</a>
                     </div>
                     <div class="ui-block-b main-category-wrapper">
                         <a class="main-category" href="#" data-role="button" data-theme="a" data-icon="star">Misc</a>
@@ -56,9 +56,9 @@
 	        </div>
         </div>
 
-        <div data-role="page" data-add-back-btn="true" id="acura">
+        <div data-role="page" data-add-back-btn="true" id="map">
 	        <div data-role="header">
-		        <h1>Acura</h1>
+		        <h1>Map</h1>
 	        </div>
 
 	        <div data-role="content">
@@ -86,15 +86,22 @@
         </div>
 
         <script type="text/javascript" src="cordova-2.0.0.js"></script>
-        <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
+        <script type="text/javascript" src="childbrowser.js"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript">
+            $(document).bind('mobileinit', function(){
+                $.mobile.defaultPageTransition = 'slide';
+            });
+        </script>
         <script type="text/javascript" src="js/jquery.mobile-1.1.1.js"></script>
         <script type="text/javascript" src="js/jquery.ui.map.js"></script>
         <script type="text/javascript" src="js/jquery.ui.map.services.js"></script>
         <script type="text/javascript" src="js/jquery.ui.map.extensions.js"></script>
+        <script type="text/javascript" src="js/jsOAuth-1.3.6.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript">
-            app.initialize();
+            var appl = app.initialize();
         </script>
     </body>
 </html>
