--- a/www/index.html
+++ b/www/index.html
@@ -85,6 +85,19 @@
 	        </div>
         </div>
 
+        <div data-role="page" id="twitter">
+	        <div data-role="header">
+		        <h1>Twitter</h1>
+	        </div>
+
+	        <div data-role="content">
+                <p>Twitter here</p>
+	        </div>
+            <div data-role="footer">
+		        <h1>Footer</h1>
+	        </div>
+        </div>
+
         <script type="text/javascript" src="cordova-2.0.0.js"></script>
         <script type="text/javascript" src="childbrowser.js"></script>
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
