--- a/www/index.html
+++ b/www/index.html
@@ -47,12 +47,9 @@
                         <a class="main-category" href="#twitter" data-role="button" data-theme="a" data-icon="twitter">Twitter</a>
                     </div>
                     <div class="ui-block-b main-category-wrapper">
-                        <a class="main-category" href="#" data-role="button" data-theme="a" data-icon="star">Misc</a>
+                        <a class="main-category" href="#facebook" data-role="button" data-theme="a" data-icon="facebook">Facebook</a>
                     </div>
                 </div>
-	        </div>
-            <div data-role="footer">
-		        <h1>Footer</h1>
 	        </div>
         </div>
 
@@ -80,9 +77,6 @@
                     <div class="ui-li ui-li-divider ui-btn ui-bar-b ui-corner-bottom ui-btn-up-undefined"></div>
                 </div>
 	        </div>
-            <div data-role="footer">
-		        <h1>Footer</h1>
-	        </div>
         </div>
 
         <div data-role="page" id="twitter">
@@ -93,14 +87,20 @@
 	        <div data-role="content">
                 <p>Twitter here</p>
 	        </div>
-            <div data-role="footer">
-		        <h1>Footer</h1>
+        </div>
+
+        <div data-role="page" id="facebook">
+	        <div data-role="header">
+		        <h1>Facebook</h1>
+	        </div>
+
+	        <div data-role="content">
+                <p>Facebook here</p>
 	        </div>
         </div>
 
         <script type="text/javascript" src="cordova-2.0.0.js"></script>
         <script type="text/javascript" src="childbrowser.js"></script>
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript">
             $(document).bind('mobileinit', function(){
@@ -116,5 +116,6 @@
         <script type="text/javascript">
             var appl = app.initialize();
         </script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     </body>
 </html>
